@@ -31,6 +31,8 @@ Version 1.7.7
        properties fails. (Stefan)
 - BUG: Issue #248: division-by-zero with empty
        file in TMerge. (Stefan)
+- BUG: Issue #249: invalid file crashes
+       TortoiseBlame. (Stefan)
 
 Version 1.7.6
 - BUG: Issue #209: repo browser doesn't
